--- a/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
+++ b/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
@@ -5,8 +5,7 @@
 <section class="intro">
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
-        <p>Welcome to the oficial Space Game site!</p>
-        <p>An example site for learning</p>
+        <p>Welcome to the (JG) official Space Game site!</p>
     </div>
 </section>
 <section class="download">
